fix broken view on mobile

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -112,7 +112,8 @@ $singleGrid: 100/12;
     font-size: 1.1vw;
     font-family: $raleway;
     float: right;
-    margin: 5% 3% 5% 0px
+    margin-right: 0px;
+    padding: 10% 2% 10% 0px;
   }
 }
 
